--- a/src/ImageCarouselModal.module.css
+++ b/src/ImageCarouselModal.module.css
@@ -18,6 +18,20 @@
     left: 0;
   }
 
+  .rando {
+    background-color: purple;
+  }
+
+  .imageContainer {
+    width: 100%;
+    padding: 3rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+
   .productImage {
     width: 30%;
     border-radius: 1rem;
@@ -28,7 +42,7 @@
     justify-content: center;
     align-items: center;
     width: 35%;
-    margin: 2rem auto;
+    margin: 0.5rem auto;
   }
 
   .thumbnail {
@@ -36,6 +50,11 @@
     margin: auto;
     border-radius: 0.5rem;
     overflow: hidden;
+  }
+
+  .thumbnail:hover {
+    cursor: pointer;
+    opacity: 60%;
   }
 
   .selected {
@@ -49,10 +68,14 @@
   }
 
   .closeIcon {
-    width: 1.6%;
+    width: 1.8%;
     position: absolute;
-    top: 6%;
+    top: 0%;
     right: 35%;
+  }
+
+  .closeIcon:hover {
+    cursor: pointer;
   }
 
   .btn {
@@ -63,6 +86,10 @@
     width: 3rem;
     position: absolute;
     top: 40%;
+  }
+
+  .btn:hover {
+    cursor: pointer;
   }
 
   .previous {
