--- a/src/components/ProductImage.module.css
+++ b/src/components/ProductImage.module.css
@@ -22,6 +22,10 @@
   top: 40%;
 }
 
+.btn:hover {
+  cursor: pointer;
+}
+
 .previous {
   left: 5%;
 }
@@ -58,6 +62,11 @@
     margin: auto;
     border-radius: 0.5rem;
     overflow: hidden;
+  }
+
+  .thumbnail:hover {
+    cursor: pointer;
+    opacity: 60%;
   }
 
   .selected {
